--- a/bigHeadLMS/package.json
+++ b/bigHeadLMS/package.json
@@ -17,13 +17,14 @@
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
     "@fastify/cors": "^8.2.0",
+    "@fastify/postgres": "^5.2.0",
     "@fastify/sensible": "^5.0.0",
+    "ajv": "^8.11.2",
+    "dotenv": "^10.0.0",
     "fastify": "^4.15.0",
     "fastify-cli": "^5.7.1",
     "fastify-plugin": "^4.0.0",
-    "ajv": "^8.11.2",
-    "dotenv": "^10.0.0",
-    "pg": "^8.8.0"
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "tap": "^16.1.0"
